from button import Button


class RoundButton(Button):

    def render(self):
        print("Round")

    def onClick(self):
        print("onClick")
